force-app/main/default/objects/Account.object
<CustomObject>
    <fields>
        <fullName>Is_Household__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Household?</label>
        <type>Checkbox</type>
    </fields>
    <recordTypes>
        <fullName>Group</fullName>
        <active>true</active>
        <description>Select this for any type or organization or household.</description>
        <label>Group</label>
    </recordTypes>
</CustomObject>