force-app/main/default/objects/Account/fields/Business_Phone__c.field-meta.xml
<CustomField>
    <fullName>Business_Phone__c</fullName>
    <inlineHelpText>Business or work phone number for the contact.</inlineHelpText>
    <label>Business Phone</label>
    <type>Phone</type>
</CustomField>