force-app/main/default/objects/Account/fields/Formal_Greeting__c.field-meta.xml
<CustomField>
    <fullName>Formal_Greeting__c</fullName>
    <inlineHelpText>Formal greeting as it would appear at the top of a mailing or communication block or on an outside envelope</inlineHelpText>
    <label>Formal Greeting</label>
    <length>255</length>
    <type>Text</type>
</CustomField>