force-app/main/default/objects/Account/fields/Formal_Salutation__c.field-meta.xml
<CustomField>
    <fullName>Formal_Salutation__c</fullName>
    <inlineHelpText>Formal salutation as it would appear in communications in a “Dear ___” line</inlineHelpText>
    <label>Formal Salutation</label>
    <type>TextArea</type>
</CustomField>