force-app/main/default/objects/Account/fields/Informal_Greeting__c.field-meta.xml
<CustomField>
    <fullName>Informal_Greeting__c</fullName>
    <inlineHelpText>Informal greeting as it would appear at the top of a mailing or communication block or on an outside envelope</inlineHelpText>
    <label>Informal Greeting</label>
    <length>255</length>
    <type>Text</type>
</CustomField>