force-app/main/default/objects/Account/fields/Informal_Salutation__c.field-meta.xml
<CustomField>
    <fullName>Informal_Salutation__c</fullName>
    <inlineHelpText>Informal salutation as it would appear in communications in a “Dear ___” line</inlineHelpText>
    <label>Informal Salutation</label>
    <type>TextArea</type>
</CustomField>