force-app/main/default/objects/Account/fields/Update_Household_Greetings_Salutations__c.field-meta.xml
<CustomField>
    <fullName>Update_Household_Greetings_Salutations__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Will trigger an automation to review all household members (for household) and automatically update the greetings and salutations.  Can also be used for Person Accounts.</description>
    <inlineHelpText>Will trigger an automation to review all household members (for household) and automatically update the greetings and salutations.  Can also be used for Person Accounts.</inlineHelpText>
    <label>Update Greetings Salutations</label>
    <type>Checkbox</type>
</CustomField>