force-app/main/default/objects/Account/fields/Update_Household_Name__c.field-meta.xml
<CustomField>
    <fullName>Update_Household_Name__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Will trigger an automation to review all household members and automatically update the household name.</description>
    <inlineHelpText>Will trigger an automation to review all household members and automatically update the household name.</inlineHelpText>
    <label>Update Household Name</label>
    <type>Checkbox</type>
</CustomField>