force-app/main/default/objects/Account/recordTypes/Household.recordType-meta.xml
<RecordType>
    <fullName>Household</fullName>
    <active>true</active>
    <description>Select this for a household. This will create a business account.</description>
    <label>Household</label>
</RecordType>