force-app/main/default/objects/Account/recordTypes/Organization.recordType-meta.xml
<RecordType>
    <fullName>Organization</fullName>
    <active>true</active>
    <description>Select this for any type of organization, formal or informal.  This will create a business account.</description>
    <label>Organization</label>
</RecordType>