force-app/main/default/objects/Account/listViews/All_Households.listView-meta.xml
<ListView>
    <fullName>All_Households</fullName>
    <booleanFilter>1 AND 2</booleanFilter>
    <columns>ACCOUNT.NAME</columns>
    <columns>ACCOUNT.PHONE1</columns>
    <columns>ACCOUNT.ADDRESS1_CITY</columns>
    <columns>ACCOUNT.ADDRESS1_STATE</columns>
    <columns>ACCOUNT.RECORDTYPE</columns>
    <columns>Is_Household__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Is_Household__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <filters>
        <field>IS_PERSON_ACCOUNT</field>
        <operation>equals</operation>
        <value>0</value>
    </filters>
    <label>All Households</label>
</ListView>