force-app/main/default/objects/Account/listViews/All_Individuals.listView-meta.xml
<ListView>
    <fullName>All_Individuals</fullName>
    <columns>ACCOUNT.NAME</columns>
    <columns>ACCOUNT.PHONE1</columns>
    <columns>PC_EMAIL</columns>
    <columns>PC_ADDRESS2_CITY</columns>
    <columns>PC_ADDRESS2_ZIP</columns>
    <columns>ACCOUNT.RECORDTYPE</columns>
    <columns>IS_PERSON_ACCOUNT</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>IS_PERSON_ACCOUNT</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>All Individuals</label>
</ListView>